feat(barash): page and image

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <a href="/contacts.html">Contacts</a>
 <a href="/info.html">Info</a>
 <a href="/krosh.html">Крош</a>
+<a href="/barash.html">Бараш</a>
 </body>
 </html>
