feat(losyash): page and image

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <a href="/info.html">Info</a>
 <a href="/krosh.html">Крош</a>
 <a href="/barash.html">Бараш</a>
+<a href="/losyash.html">Лосяш</a>
 </body>
 </html>
