feat(advertisements): page and header with text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <a href="/contacts.html">Contacts</a>
 <a href="/info.html">Info</a>
+<a href="/advertisements.html">Advertisements</a>
 <a href="/krosh.html">Крош</a>
 <a href="/barash.html">Бараш</a>
 <a href="/losyash.html">Лосяш</a>
