feat(batman): page and image

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <a href="/krosh.html">Крош</a>
 <a href="/barash.html">Бараш</a>
 <a href="/losyash.html">Лосяш</a>
+<a href="/batman.html">Batman</a>
 </body>
 </html>
