feat(superman): page and image

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <a href="/barash.html">Бараш</a>
 <a href="/losyash.html">Лосяш</a>
 <a href="/batman.html">Batman</a>
+<a href="/superman.html">Superman</a>
 </body>
 </html>
