--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <a href="/losyash.html">Лосяш</a>
 <a href="/batman.html">Batman</a>
 <a href="/superman.html">Superman</a>
+<a href="/avengers.html">Avengers</a>
 </body>
 </html>
