--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <a href="/batman.html">Batman</a>
 <a href="/superman.html">Superman</a>
 <a href="/avengers.html">Avengers</a>
+<a href="/minecraft.html">Minecraft</a>
 </body>
 </html>
