feat(valorant): page and image

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <a href="/avengers.html">Avengers</a>
 <a href="/minecraft.html">Minecraft</a>
 <a href="/roblox.html">Roblox</a>
+<a href="/valorant.html">Valorant</a>
 </body>
 </html>
