--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>Glassync</title>
 </head>
 <body>
-<a href="/contacts.html">Contacts</a>
-<a href="/info.html">Info</a>
-<a href="/advertisements.html">Advertisements</a>
+<a href="/main/index.html">Main</a>
 <a href="/krosh.html">Крош</a>
 <a href="/barash.html">Бараш</a>
 <a href="/losyash.html">Лосяш</a>
